--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:itemIconTint="@null"
-        app:itemTextColor="@color/white"
+        app:itemTextColor="@color/black"
         app:menu="@menu/bottom_nav_menu"/>
 
 
