--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,10 +4,12 @@
         <item
             android:id="@+id/navigation_dashboard"
             android:icon="@drawable/pokedex"
-            android:title="@string/title_dashboard" />
+            android:title="@string/title_dashboard"
+            android:textColor="@color/white"/>
 
         <item
             android:id="@+id/navigation_profile"
             android:icon="@drawable/ic_notifications_black_24dp"
-            android:title="@string/title_profile"/>
+            android:title="@string/title_profile"
+            android:textColor="@color/white"/>
     </menu>
