--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#104F55</color>
-    <color name="purple_500">#adbf97</color>
-    <color name="purple_700">#BAC7BE</color>
+    <color name="purple_200">#3F51B5</color>
+    <color name="purple_500">#FFC300</color>
+    <color name="purple_700">#E6E6E6</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
