--- a/app/src/main/res/drawable/rounded_background.xml
+++ b/app/src/main/res/drawable/rounded_background.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/purple_700" />
-    <corners android:radius="4dp" />
+    <solid android:color="#DDDDDD" />
+    <corners android:radius="100dp" />
 </shape>
