--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,19 +3,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@android:color/white">
 
+    <TextView
+        android:id="@+id/pokemonName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:textColor="@android:color/black"
+        android:text="User Profile" />
     <ImageView
         android:id="@+id/profileImage"
-        android:layout_width="110dp"
-        android:layout_height="100dp"
-        android:layout_centerHorizontal="true"
+        android:layout_width="210dp"
+        android:layout_height="200dp"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:src="@drawable/default_profile_image"
         android:contentDescription="@string/profile_image"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:background="@drawable/border_shadow"/>
     <Button
         android:id="@+id/btnChangeProfileImage"
         android:layout_width="wrap_content"
@@ -26,29 +37,47 @@
 
     <TextView
         android:id="@+id/lblEmail"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="Adresse Mail :"
+        android:layout_margin="8dp"
+        android:textColor="@android:color/black"
+        android:textSize="18dp"
+        android:text="Email :"
+        android:layout_marginBottom="10dp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/txtEmail"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="8dp" />
+        android:layout_marginEnd="8dp"
+        android:text="Unknown"
+        android:textColor="@android:color/black"
+        android:textSize="20dp"
+        android:background="@drawable/rounded_background"
+        android:layout_marginTop="5dp"
+        android:padding="10dp"/>
 
     <TextView
         android:id="@+id/lblPassword"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="Mot de passe :"
+        android:layout_margin="8dp"
+        android:textColor="@android:color/black"
+        android:textSize="18dp"
+        android:text="Password :"
+        android:layout_marginBottom="10dp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/txtPassword"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="8dp" />
+        android:layout_marginEnd="8dp"
+        android:text="Unknown"
+        android:textColor="@android:color/black"
+        android:textSize="20dp"
+        android:background="@drawable/rounded_background"
+        android:layout_marginTop="5dp"
+        android:padding="10dp"/>
 </LinearLayout>
