--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -77,16 +77,17 @@
         android:textStyle="bold"
         android:gravity="center"/>
 
-    <TextView
+    <EditText
         android:id="@+id/txtPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:text="Unknown"
+        android:hint="Hidden"
+        android:inputType="textPassword"
+        android:focusable="false"
+        android:background="@drawable/rounded_background"
         android:textColor="@android:color/black"
         android:textSize="20dp"
-        android:background="@drawable/rounded_background"
         android:layout_marginTop="5dp"
         android:padding="10dp"
-        android:gravity="center"/>
+        android:textAlignment="center"/>
 </LinearLayout>
